Intersection/dev_only/ROS2_drone_dev/deis_ws2/log/build_2020-12-11_22-26-06/py_intersection_mgr/stderr.log
  File "/home/ubuntu/deis_ws2/install/py_intersection_mgr/lib/python3.8/site-packages/py_intersection_mgr/intersection_mgr.py", line 255
    except (Exception, KeyboardInterrupt, SystemExit):
    ^
SyntaxError: invalid syntax

